# django-store-project

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: conftest.py  demodb.json
src/app/: .env.dev  __init__.py  celery.py  files.py  models.py  services.py  settings.py  urls.py
src/app/admin/: __init__.py  model_admin.py
src/app/admin/static/admin/css/: admin_color.css
src/app/admin/templates/admin/: base_site.html
src/app/conf/: auth.py  basket.py  boilerplate.py  cache.py  cart.py  db.py  debug_toolbar.py  email.py  environ.py  i18n.py  installed_apps.py  logging.py  media.py  middleware.py  static.py  templates.py  timezone.py
src/app/fixtures/: __init__.py  factory.py
src/app/migrations/: 0001_create_shop_schema.py  0002_change_search_path.py  0003_change_all_tables_schema.py
src/app/test/: __init__.py  factories.py
src/checkout/: admin.py  basket.py  cart.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
src/checkout/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_order_updated_remove_orderitem_color_and_more.py  0005_alter_order_status.py  0006_alter_order_country_alter_order_status.py
src/checkout/services/: __init__.py  order_creator.py  order_item_creator.py
src/checkout/templatetags/: __init__.py  json_humanize.py
src/checkout/tests/: conftest.py  factories.py
src/checkout/tests/services/: test_order_creator.py  test_order_item_creator.py
src/checkout/tests/templatetags/: test_json_humanize.py
src/checkout/tests/views/: test_basket_view.py  test_checkout_view.py
src/products/: admin.py  apps.py  forms.py  lookups.py  tasks.py  urls.py
src/products/migrations/: 0001_initial.py  0002_initial.py  0003_rename_product_id_productoption_product_and_more.py  0004_create_product_view.py  0005_alter_review_rating.py  0006_create_single_product_view.py  0007_alter_product_public_id.py  0008_remove_review_date.py  0009_alter_review_rating.py  0010_alter_productoption_values.py  0011_alter_category_image.py  0012_alter_category_slug.py
src/products/models/: __init__.py  categories.py  images.py  products.py  reviews.py
src/products/models/postgres_views/: __init__.py  product_view.py  single_product_view.py
src/products/services/: __init__.py  notes.md  option_creator.py  product_create_composer.py  product_creator.py  variant_creator.py
src/products/templatetags/: fields_counter.py  product_cards.py  query_urls.py  split_url_parameters.py
src/products/tests/: conftest.py  factories.py  test_model.py  test_tasks.py
src/products/tests/services/: conftest.py  test_option_creator.py  test_product_create_composer.py  test_product_creator.py  test_variant_creator.py
src/products/tests/templatetags/: test_fields_counter.py  test_product_card.py  test_query_urls.py  test_split_url_parameters.py
src/products/tests/views/: test_contact_view.py  test_index_view.py  test_search_view.py  test_shop_view.py
src/products/views/: __init__.py  contact.py  index.py  search.py  shop.py
src/static/css/: extended-styles.css  style.css
src/static/lib/owlcarousel/: LICENSE
src/static/mail/: contact.js
src/templates/: base.html
src/templates/checkout/: basket.html  cart.html  checkout.html
src/templates/inc/: _footer.html  _messages.html  _navbar.html  _pagination.html  _product_card.html  _topbar.html
src/templates/products/: contact.html  detail.html  index.html  shop.html
src/templates/users/: account.html  login.html  register.html
src/users/: backends.py  models.py  urls.py  views.py
src/users/forms/: __init__.py  a12n.py  account.py  mixins.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_phone_number.py  0003_alter_user_phone_number.py  0004_alter_user_email.py
src/users/services/: __init__.py  user_creator.py  user_updater.py
src/users/tests/: factories.py  test_backends.py
src/users/tests/services/: conftest.py  test_user_creator.py  test_user_updater.py
src/users/tests/views/: test_account_edit_view.py  test_account_view.py  test_login_view.py  test_password_change_view.py  test_register_view.py
