[project]
name = "src"
version = "0.0.1"
dependencies = [
    "django==4.2",
    "pillow",
    "django-environ",
    "django-split-settings",
    "bcrypt",
    "django-behaviors",
    # "djangorestframework",  # djangorestframework-camel-case
    # "djangorestframework-simplejwt",  # drf-jwt
    # "django-filter",
    # "redis",

    "django-health-check",  # https://github.com/revsys/django-health-check/tree/master
    # "drf-spectacular-sidecar",
    # "django-healthchecks",  # deprecated
    # "sentry-sdk",
    "psycopg2-binary",
    # "celery",

    # "django-ipware",
    # "django-axes",
    # "whitenoise",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "isort",
    "django-debug-toolbar",
    # "dotenv-linter",

    # "pytest",

    # "mypy",

    # "flake8",
]

[tool.black]
 exclude = '''
 /(
   | migrations
 )/
 '''
 line_length = 120

[tool.isort]
profile = "google"
line_length = 120
multi_line_output = 3
use_parentheses = true
extra_standard_library = ["pytest"]
known_django = ["django"]  # "restframework"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
