[project]
name = "src"
version = "0.0.1"
dependencies = [
    "django==4.2",
    "pillow",
    "django-environ",
    "django-split-settings",
    "bcrypt",
    "django-behaviors",
    "redis",
    "celery",
    # "djangorestframework",  # djangorestframework-camel-case
    # "djangorestframework-simplejwt",  # drf-jwt
    # "django-filter",

    "django-health-check",  # https://github.com/revsys/django-health-check/tree/master
    # "drf-spectacular-sidecar",
    # "sentry-sdk",
    "psycopg2-binary",

    # "django-ipware",
    # "django-axes",
    # "whitenoise",
]


[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "isort",
    "autoflake",
    "django-debug-toolbar",
    # "dotenv-linter",

    "faker",
    "mixer",
    "pytest-factoryboy",
    "pytest-django",
    "pytest-cov",
    "pytest-deadfixtures",
    "pytest-randomly",
    "pytest-xdist",
    # "pytest-env",
    # "pytest-freezegun",
    # "pytest-mock",
    # "pytest-repeat",
    # "pytest-httpx",

    # "mypy",

    "flake8",
    "flake8-absolute-import",
    "flake8-black",
    "flake8-bugbear",
    "flake8-cognitive-complexity",
    "flake8-django",
    "flake8-eradicate",
    "flake8-fixme",
    "flake8-isort>=4.0.0",
    "flake8-multiline-containers",
    "flake8-mutable",
    "flake8-pie",
    "flake8-print",
    "flake8-pytest",
    "flake8-pytest-style",
    "flake8-simplify",
    "flake8-tidy-imports",
    "flake8-variables-names",
    "flake8-pyproject",
]


[tool.black]
 exclude = '''
 /(
   | migrations
 )/
 '''
 line_length = 120


[tool.isort]
profile = "google"
line_length = 120
lines_after_imports=2
multi_line_output = 3
use_parentheses = true
extra_standard_library = ["pytest"]
known_django = ["django"]  # "restframework"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]


[tool.flake8]
max-line-length = 120
line-quotes = "\""
pytest-mark-no-parentheses = true

ignore = [
    "B010",  # Do not call setattr(x, 'attr', val), instead use normal property access: x.attr = val
    "DJ01",  # Avoid using null=True on string-based fields such as CharField and TextField
    "DJ07",  # Allow __all__ in fields for ModelForm
    "DJ12",  # Field ordering
    "E501",  # Line too long
    "E265",  # Block comments should have one space before the pound sign (#) and the comment itself
    "F811",  # Redefinition of unused name from line n
    "FS003",  # f-string missing prefix
    "PIE783",  # Warn about Celery task definitions that don't have explicit names
    "PIE785",  # Celery tasks can bunch up if they don't have expirations
    "PIE801",  # Return boolean expressions directly instead of returning True and False
    "PT001",  # Use @pytest.fixture() over @pytest.fixture
    "SIM102",  # Use a single if-statement instead of nested if-statements
    "SIM113",  # Use enumerate instead of manually incrementing a counter
    "VNE003",  # Variable names that shadow builtins are not allowed
    "W503",  # https://www.flake8rules.com/rules/W503.html
    "E203", # whitespace before ':', disabled for black purposes https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
]
banned-modules = """
    typing.Optional = Please use "x | None"
    typing.Union = Please use "x | y"
    typing.List = Please use "list" instead of "List"
    typing.Dict = Please use "dict" instead of "Dict"
"""
exclude = [
    "static",
    "migrations",
    ".git",
    "__pycache__",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
addopts = "--reuse-db"

filterwarnings = [
  "ignore::django.utils.deprecation.RemovedInDjango50Warning:django.conf",
  "ignore::django.core.paginator.UnorderedObjectListWarning",
]

python_files = "test*.py"